--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -129,7 +129,7 @@ jobs:
     name: Post Status Comment
     runs-on: ubuntu-latest
     needs: [lint, build, unit-test]
-    if: always() && needs.lint.result == 'success' && needs.unit-test.result == 'success' && needs.e2e-test.result == 'success'
+    if: always() && needs.lint.result == 'success' && needs.unit-test.result == 'success'
     permissions:
       pull-requests: write
     steps:
@@ -167,4 +167,3 @@ jobs:
               repo: context.repo.repo,
               body: comment
             });
-
